stable/standardnotes-server/templates/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      restartPolicy: Always
      containers:
      - name: auth
        image: standardnotes/auth:1.38.0
        command: ["/bin/sh"]
        args:
          - -c
          - >-
              ./wait-for.sh db 3306 &&
              ./wait-for.sh cache 6379 &&
              ./wait-for.sh syncing-server-js 3000
              ./docker/entrypoint.sh start-web
      - name: auth-worker
        image: standardnotes/auth:1.38.0
        command: ["/bin/sh"]
        args:
          - -c
          - >-
              ./wait-for.sh db 3306 &&
              ./wait-for.sh cache 6379 &&
              ./wait-for.sh auth 3000
              ./docker/entrypoint.sh start-worker
