stable/standardnotes-server/templates/cache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache
  labels:
    app: cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      restartPolicy: Always
      containers:
      - name: cache
        image: redis:6.0-alpine
        ports:
        - containerPort: 6379
        volumeMounts:
        - mountPath: /data
          name: redis

      securityContext:
        runAsUser: 2000
        fsGroup: 2000

      volumes:
      - name: redis
        persistentVolumeClaim:
          claimName: redis
