stable/standardnotes-server/templates/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      restartPolicy: Always
      containers:
      - name: db
        image: mysql:5.6
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql
        - mountPath: /docker-entrypoint-initdb.d
          name: import
        - mountPath: /etc/mysql/mysql.conf.d
          name: config
      
      securityContext:
        runAsUser: 2000
        fsGroup: 2000


      volumes:
      - name: mysql
        persistentVolumeClaim:
          claimName: mysql
      - name: import
        persistentVolumeClaim:
          claimName: import
      - name: config
        configMap:
          name: db-configmap
