stable/standardnotes-server/templates/syncing-server-js-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncing-server-js
  labels:
    app: syncing-server-js
spec:
  replicas: 1
  selector:
    matchLabels:
      app: syncing-server-js
  template:
    metadata:
      labels:
        app: syncing-server-js
    spec:
      restartPolicy: Always
      containers:
      - name: syncing-server-js
        image: standardnotes/syncing-server-js:1.46.1
        command: ["/bin/sh"]
        args:
          - -c
          - >-
              ./wait-for.sh db 3306 &&
              ./wait-for.sh cache 6379 &&
              ./docker/entrypoint.sh start-web
        ports:
        - containerPort: 3000
      
      - name: syncing-server-js-worker
        image: standardnotes/syncing-server-js:1.46.1
        command: ["/bin/sh"]
        args:
          - -c
          - >-
            ./wait-for.sh db 3306 &&
            ./wait-for.sh cache 6379 &&
            ./wait-for.sh syncing-server-js 3000
            ./docker/entrypoint.sh start-worker
        ports:
        - containerPort: 3000
