stable/standardnotes-server/templates/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-gateway
  name: api-gateway
spec:
  selector:
    app: api-gateway
  type: ClusterIP
  ports:
  - name: api-gateway
    port: 3000
    targetPort: 3000
