stable/standardnotes-server/templates/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: auth
  name: auth
spec:
  selector:
    app: auth
  type: ClusterIP
  ports:
  - name: auth
    port: 3000
    targetPort: 3000
