stable/standardnotes-server/templates/cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cache
  name: cache
spec:
  selector:
    app: cache
  type: ClusterIP
  ports:
  - name: cache
    port: 6379
    targetPort: 6379
