stable/standardnotes-server/templates/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
  name: db
spec:
  selector:
    app: db
  type: ClusterIP
  ports:
  - name: db
    port: 3306
    targetPort: 3306
