stable/standardnotes-server/templates/syncing-server-js-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: syncing-server-js
  name: syncing-server-js
spec:
  selector:
    app: syncing-server-js
  type: ClusterIP
  ports:
  - name: syncing-server-js
    port: 3000
    targetPort: 3000
